--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -23,6 +23,8 @@ target 'RNDemo02' do
 
 
 
+  pod 'KPNativeGallery', :path => '../node_modules/react-native-kpframework-gallery'
+
 end
 
 # very important to have, unless you removed React dependencies for Libraries
